Fix header alignment

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -3,6 +3,6 @@
   position: fixed;
   width: 100%;
   height: 60px;
-  padding: 16px 24px;
+  padding: 16px 0;
   z-index: 1;
 }
