--- a/src/components/search/search.scss
+++ b/src/components/search/search.scss
@@ -5,7 +5,6 @@
   align-items: center;
   justify-content: center;
   padding-left: 0.5rem;
-  padding-right: 0.5rem;
   margin: 0;
 }
 
